@@ -21,9 +21,11 @@ CameraTowerBuilding.box_image = 'camera_tower_box.png';
 CameraTowerBuilding.res_key = 'camera_tower.png';
 CameraTowerBuilding.obj_name = 'Camera Tower';
 CameraTowerBuilding.cost = 200;
+HeadquarterBuilding.energy = 50;
 CameraTowerBuilding.enabled = false;
 CameraTowerBuilding.count = 0;
 CameraTowerBuilding.cell_size = {x: 1, y: 2};
+CameraTowerBuilding.cell_matrix = [1,1];
 CameraTowerBuilding.cell_padding = {x: 0, y: 1};
 CameraTowerBuilding.image_size = {x: 24, y: 48};
 CameraTowerBuilding.image_padding = {x: 0, y: 0};
