@@ -21,9 +21,11 @@ HeadquarterBuilding.box_image = 'headquarter_box.png';
 HeadquarterBuilding.res_key = 'headquarter.png';
 HeadquarterBuilding.obj_name = 'Headquarter 1';
 HeadquarterBuilding.cost = 750;
+HeadquarterBuilding.energy = 100;
 HeadquarterBuilding.enabled = true;
 HeadquarterBuilding.count = 0;
 HeadquarterBuilding.cell_size = {x: 5, y: 4};
+HeadquarterBuilding.cell_matrix = [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1];
 HeadquarterBuilding.cell_padding = {x: 2, y: 2};
 HeadquarterBuilding.image_size = {x: 103, y: 138};
 HeadquarterBuilding.image_padding = {x: -9, y: 42};
