@@ -45,9 +45,11 @@ WaterLaunchPadBuilding.box_image = 'water_launch_box.png';
 WaterLaunchPadBuilding.res_key = 'water_launch.png';
 WaterLaunchPadBuilding.obj_name = 'Water Launch Pad';
 WaterLaunchPadBuilding.cost = 2500;
+WaterLaunchPadBuilding.energy = 100;
 WaterLaunchPadBuilding.enabled = true;
 WaterLaunchPadBuilding.count = 0;
 WaterLaunchPadBuilding.cell_size = {x: 5, y: 3};
+WaterLaunchPadBuilding.cell_matrix = [0,1,1,1,1,1,1,1,1,1,1,1,1,1,0];
 WaterLaunchPadBuilding.cell_padding = {x: 2, y: 1};
 WaterLaunchPadBuilding.image_size = {x: 112, y: 76};
 WaterLaunchPadBuilding.image_padding = {x: -10, y: 7};
